# CNC

./: .gitmodules  README.md
CAD/: BOM.ods
CAD/3d printed parts/: X cable tray support.SLDPRT  X frame BF12 spacer.SLDPRT  X frame BK12 spacer.SLDPRT  X frame corner plate.SLDPRT  X frame corner.SLDPRT  X frame screw support left.SLDPRT  X frame screw support right.SLDPRT  X limit switch support.SLDPRT  XZ frame motor support.SLDPRT  Y cable tray support.SLDPRT  Y frame screw support.SLDPRT  Y frame support left.SLDPRT  Y frame support right.SLDPRT  Y limit switch support.SLDPRT  YZ frame BF12 spacer.SLDPRT  (+10 more)
control/: CMakeLists.txt  README.md
control/include/control/: Cnc.h
control/include/control/dialogs/: InvalidGCodeDialog.h  SettingsDialog.h
control/include/control/models/: GCodeModel.h  SettingsModel.h
control/include/control/widgets/: CncWidget.h  ConsoleWidget.h  CoordinateWidget.h  GCodeFileWidget.h  GCodeViewWidget.h  MainWindow.h  MotionControlWidget.h  PrinterWidget.h  SmallMainWindow.h  SpindleControlWidget.h  SpindleStatusWidget.h
control/resources/: resources.qrc
control/src/: Cnc.cpp  main.cpp
control/src/dialogs/: InvalidGCodeDialog.cpp  SettingsDialog.cpp
control/src/models/: GCodeModel.cpp  SettingsModel.cpp
control/src/widgets/: CncWidget.cpp  ConsoleWidget.cpp  CoordinateWidget.cpp  GCodeFileWidget.cpp  GCodeViewWidget.cpp  MainWindow.cpp  MotionControlWidget.cpp  PrinterWidget.cpp  SmallMainWindow.cpp  SpindleControlWidget.cpp  SpindleStatusWidget.cpp
electronics/: .~lock.BOM.ods#  BOM.ods  CNC.bck  CNC.dcm  CNC.lib
(+331 files in other folders)
